update pom, dockerfile and usertest